--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,9 @@ a{
         height: 100vh;
         width: 100vw;
         overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .switch, .switch span, .switch h1{
@@ -397,7 +400,7 @@ a{
     }
 
     .switch{
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 100px;
         flex-direction: column;
