--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,7 @@ a{
     }
 
     body{
+        visibility: visible;
         height: 100vh;
         width: 100vw;
         overflow: hidden;
@@ -400,8 +401,8 @@ a{
     }
 
     .switch{
-        position: relative;
-        top: 50%;
+        /* position: relative; */
+        /* top: 50%; */
         /* left: 100px; */
         flex-direction: column;
         justify-content: center;
