--- a/css/main.css
+++ b/css/main.css
@@ -387,7 +387,28 @@ a{
 }
 
 @media screen and (max-width:930px) {
-    body{
-        display: none;
+    .container{
+        filter: blur(20px);
+    }
+
+    .switch{
+        position: fixed;
+        z-index: 100;
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-size: 70px;
+        text-align: center;
+        padding: 0 70px;
+        font-weight: bolder;
+        background: transparent;
+    }
+
+    .switch h1{
+        margin-top: 70px;
+        font-size: 140px;
     }
 }
