--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,13 @@
     box-sizing: border-box;
 }
 
-/* @font-face{
-    font-family: 'Rubik', sans-serif;
-}
-
-@font-face{
-    font-family: 'Roboto Slab', serif;
-} */
-
 ::-webkit-scrollbar{
     width: 0px;
     height: 0px;
 }
 
 body{
-    font-family: rubik;
+    font-family: rubik, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -52,7 +44,7 @@ a{
 }
 
 .caption h3{
-    font-family: Rubik;
+    font-family: Rubik, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     margin-bottom: 20px;
     color: #8B8B8B;
@@ -63,7 +55,7 @@ a{
 
 .caption h1{
     margin-bottom: 30px;
-    font-family: Roboto Slab;
+    font-family: Roboto Slab, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
     font-size: 40px;
     line-height: 40px;
@@ -71,7 +63,7 @@ a{
 }
 
 .caption p{
-    font-family: Rubik;
+    font-family: Rubik, sans-serif;
     font-weight: 400;
     font-size: 17px;
     line-height: 33px;
@@ -88,7 +80,7 @@ a{
     height: 46px;
     background: #000A1E;
     font-size: 17px;
-    font-family: Rubik;
+    font-family: Rubik, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     line-height: 20.15px;
     color: #ffffff;
@@ -121,7 +113,7 @@ a{
     top: 20px;
     left: 98px;
     /* border: 2px solid black; */
-    font-family: Roboto Slab;
+    font-family: Roboto Slab, sans-serif;
     font-weight: 500;
     font-size: 40px;
     padding-left: 20px;
@@ -166,12 +158,12 @@ a{
 
 .desktop-links-holder .links a::after{
     content: "";
-    width: 100%;
+    width: 70%;
     height: 4px;
     background-color: rgb(255, 149, 0);
     position: absolute;
     bottom: -10px;
-    left: 0;
+    left: 17%;
     border-radius: 10px;
     transition: all 0.5s ease;
     transform: scaleX(0);
@@ -287,7 +279,7 @@ a{
 }
 
 .text{
-    font-family: Roboto Slab;
+    font-family: Roboto Slab, sans-serif;
     position: absolute;
 }
 
@@ -330,6 +322,24 @@ a{
     background: transparent;
 }
 
+.swipeno{
+    position: absolute;
+    top: 74%;
+    /* bottom: 80px; */
+    /* border: 2px solid red; */
+    right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-right: 30px; */
+    color: #fff;
+    opacity: 0.3;
+    font-size: 125px;
+    /* letter-spacing: -10px; */
+    /* font-family: Rubik, sans-serif; */
+    font-weight: 700;
+    z-index: 3;
+}
 
 
 
@@ -398,11 +408,13 @@ a{
     }
 
     .switch{
+        font-family: sans-serif;
         position: fixed;
         z-index: 100;
         display: flex;
         flex-direction: column;
         width: 100vw;
+        color: #222;
         justify-content: center;
         align-items: center;
         height: 100vh;
@@ -410,7 +422,8 @@ a{
         text-align: center;
         padding: 0 70px;
         font-weight: bolder;
-        background: transparent;
+        background: rgba(255, 255, 255, 0.364);
+        overflow: hidden;
     }
 
     .switch h1{
