--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ a{
 
 .caption{
     position: absolute;
-    z-index: 1;
+    /* z-index: 1; */
     bottom: 0;
     left: 225px;
     width: 636px;
@@ -49,6 +49,7 @@ a{
     padding: 35px 40px 0 70px;
     /* border-left: 7px solid #FDBF44; */
     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.128196), inset 10px 0px 0px #FDBF44;
+    z-index: 10;
 }
 
 .caption h3{
@@ -145,7 +146,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 10;
 }
 
 .desktop-links-holder .links{
@@ -277,6 +278,7 @@ a{
     height: 100%;
     /* height: 924px; */
     overflow: hidden;
+    z-index: 1;
     /* border: 2px solid purple; */
     background-image: linear-gradient(rgba(255, 0, 149, 0.358), rgba(0, 0, 255, 0.382));
 }
@@ -366,6 +368,7 @@ a{
     height: 10vh;
     max-height: 100px;
     padding-right: 40px;
+    z-index: 2;
 }
 
 
