--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ a{
     overflow-x: scroll;
     /* height: 90vh; */
     height: 924px;
-    background-color: #999;
+    /* background-color: #999; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -273,19 +273,19 @@ a{
 
 .swipeme{
     position: relative;
-    background-color: #444;
+    /* background-color: #444; */
     width: 100%;
     height: 100%;
     /* height: 924px; */
     overflow: hidden;
     z-index: 1;
     /* border: 2px solid purple; */
-    background-image: linear-gradient(rgba(255, 0, 149, 0.358), rgba(0, 0, 255, 0.382));
+    /* background-image: linear-gradient(rgba(255, 0, 149, 0.358), rgba(0, 0, 255, 0.382)); */
 }
 
 .swipemei{
     /* background: url(./img/); */
-    background-image: url(/img/slideshow-img.png);
+    background-image: url(/img/slideshow-img.png) !important;
     background-size: cover;
     background-position: center;
 }
