--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@
 body{
     font-family: rubik, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-tap-highlight-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .switch{
@@ -28,6 +31,7 @@ a{
     /* top: 0; */
     /* border: 2px solid red; */
     width: 100vw;
+    max-width: 1800px;
     overflow: hidden;
     background-color: #fff;
     /* height: 100vh; */
